<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_id_barang"
        android:layout_alignBottom="@+id/editText_nama"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:text="Nama Barang" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_id_barang"
        android:layout_alignBottom="@+id/editText_nama"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:text="Nama Barang" />

    <TextView
        android:id="@+id/text_id_barang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_edit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="#27ae60"
        />

    <EditText
        android:id="@+id/editText_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_id_barang"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="27dp"
        android:background="#afffffff"
        android:ems="10">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText_merk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_nama"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="17dp"
        android:background="#afffffff"
        android:ems="10" />

    <EditText
        android:id="@+id/editText_harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_merk"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:background="#afffffff"
        android:ems="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_harga"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_save_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tombol_edit"
            />

        <Button
            android:id="@+id/button_cancel_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tombol_cancel" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_id_barang"
        android:layout_alignBottom="@+id/editText_nama"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:text="Nama Barang" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText_merk"
        android:layout_alignParentStart="true"
        android:text="Merek" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText_harga"
        android:layout_alignParentStart="true"
        android:text="Harga" />
</RelativeLayout>